@@ -64,7 +64,10 @@
    * Add steps here to run during checking phase of the app.
    * Check steps should not require a database to function.
    */
-  gulp.task('check', 'Run static code analysis', ['check:phplint', 'check:phpcs', 'check:eslint']);
+  gulp.task('check', 'Run static code analysis', ['check:composer', 'check:phplint', 'check:phpcs', 'check:eslint']);
+  gulp.task('check:composer', 'Check composer.json syntax', function () {
+    return exec('composer validate');
+  });
   gulp.task('check:phplint', 'Lint PHP code', function () {
     return gulp.src(config.phpCheck)
       .pipe(phplint('', {notify: false, skipPassedFiles: true}))
